# gui_collection

CameraGUI/: CMakeLists.txt  manifest.xml
CameraGUI/src/: CameraGUI.cpp  CameraGUI.hpp  CameraWidget.cpp  CameraWidget.hpp  Canvas.cpp  Canvas.hpp
cfg_manager_gui/: CMakeLists.txt  manifest.xml
cfg_manager_gui/src/: CfgWidget.cpp  CfgWidget.h  MainCfgGui.cpp  MainCfgGui.h
config_map_gui/: CMakeLists.txt  manifest.xml
config_map_gui/src/: DataWidget.cpp  DataWidget.h
data_broker_gui/: CMakeLists.txt  manifest.xml
data_broker_gui/src/: DataConnWidget.cpp  DataConnWidget.h  DataWidget.cpp  DataWidget.h  MainDataGui.cpp  MainDataGui.h
data_broker_plotter/: CMakeLists.txt  manifest.xml
data_broker_plotter/resources/: gui.py  plot.py
data_broker_plotter/src/: DataBrokerPlotter.cpp  DataBrokerPlotter.hpp  DataBrokerPlotterLib.cpp  DataBrokerPlotterLib.hpp
gui_app/: CMakeLists.txt  manifest.xml
gui_app/src/: GuiApp.cpp  GuiApp.hpp
lib_manager_gui/: CMakeLists.txt  manifest.xml
lib_manager_gui/src/: LibManagerGui.h  LibManagerWidget.h
log_console/: CMakeLists.txt  manifest.xml
log_console/src/: ConsoleGUI.h  MainConsole.cpp  MainConsole.h
main_gui/: CMakeLists.txt  manifest.xml
main_gui/src/: BaseWidget.h  MyQMainWindow.cpp  MyQMainWindow.h
